# whereismywindow

./: Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  main.rs
src/focus/: mod.rs  tracker.rs  window_info.rs
src/hotkey/: reveal.rs
src/monitor/: enumeration.rs  geometry.rs  mod.rs
src/overlay/: border.rs  flash.rs  indicator.rs  mod.rs  window.rs
src/settings/: autostart.rs  data.rs  launch.rs  mod.rs  persistence.rs  ui.rs
src/tray/: icon.rs
