[package]
name = "whereismywindow"
version = "0.1.0"
edition = "2021"
description = "System tray utility showing which window has keyboard focus and which monitor it's on"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
] }
tray-icon = "0.19"
global-hotkey = "0.6"
log = "0.4"
env_logger = "0.11"
image = "0.25"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
